2008-04-10  Pavel Roskin  <proski@gnu.org>

	* configure.ac: Always use "_cv_" in cache variables for
	compatibility with Autoconf 2.62.

2008-03-28  Robert Millan  <rmh@aybabtu.com>

	Surpass 1 TiB disk addressing limit.  Note: there are no plans to handle
	the 2 TiB disk limit in GRUB Legacy, since that would need considerable
	rework.  If you have >2TiB disks, use GRUB 2 instead.

	* grub/asmstub.c (biosdisk): Add unsigned qualifier to `sector'.
	* stage2/bios.c (biosdisk): Likewise.
	* stage2/disk_io.c (rawread, devread, rawwrite, devwrite): Likewise.
	* stage2/shared.h (rawread, devread, rawwrite, devwrite): Likewise.
	* lib/device.c (get_drive_geometry): Replace BLKGETSIZE with
	BLKGETSIZE64.

2007-10-29  Pavel Roskin  <proski@gnu.org>

	* configure.ac: Test if '--build-id=none' is supported by the
	linker and add it to LDFLAGS if possible.  Build ID causes
	objcopy to generate huge binary files.
	* aclocal.m4 (grub_PROG_OBJCOPY_ABSOLUTE): Use LDFLAGS when
	linking, so that build ID doesn't break the test.
	* stage1/Makefile.am: Preserve LDFLAGS, use stage1_exec_LDFLAGS.

2007-02-22  Pavel Roskin  <proski@gnu.org>

	* stage2/iso9660.h: Remove unnecessary packed attributes.

2007-02-22  Robert Millan  <rmh@aybabtu.com>

	* util/mkbimage: Update my email address, and remove my name from
	some places where unnecessary credit is given.

2006-09-10  Pavel Roskin  <proski@gnu.org>

	* netboot/natsemi.c: Fix compile error with gcc 4.1.1.  Cast
	cannot make a variable volatile - it should be declared as such.
	* netboot/sis900.c: Likewise.

2006-09-08  Pavel Roskin  <proski@gnu.org>

	* netboot/etherboot.h: Remove incorrect extern declarations of
	the variables later declared static.  Move BOOTP_DATA_ADDR ...
	* netboot/main.c: ... here.  Eliminate end_of_rfc1533 - it's
	write-only.

2006-06-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi: Changed the license term to the GNU Free
	Documentation License 1.2.
